# proc-bindgen

./: Cargo.toml  README.md
example/: Cargo.toml  build.rs
example/my_gen/: Cargo.toml
example/my_gen/src/: lib.rs
example/src/: binding.hpp  main.rs
proc-bindgen-macro/: Cargo.toml
proc-bindgen-macro/src/: lib.rs
src/: lib.rs
