[package]
name = "proc-bindgen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.80", features = [ "full", "extra-traits" ]}
proc-macro2 = { version = "1.0.29", features = ["span-locations"] }
proc-bindgen-macro = { path ="./proc-bindgen-macro" }