[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-bindgen-macro = { path = "../proc-bindgen-macro" }

[build-dependencies]
gen = { path = "gen" }
proc-bindgen = { path = ".." }
syn = "1.0.80"