[package]
name = "proc-bindgen-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.80", features = ["full"] }
proc-macro2= { version = "1.0.30", features = ["span-locations"] }
quote = "1.0.10"